public/stylesheets/style.css
nav{
  display: flex;
  /* justify-content: space-around; */
  align-items: center;
  min-height: 8vh;
  background-color: #ff3627;
  font-family: 'Roboto', sans-serif;
}

body {
  font-family: 'Roboto', sans-serif;
  color: #ffffff;
  font-weight: 300;
  background-color: #ff3627;
 }
 
 .brand-logo {
  font-family: 'Abril Fatface', serif;
  font-style: bold;
  font-size: 40px;
  color: #ffffff;
  text-decoration: overline;
  text-align: left;
 }


 ul {
  font-family: 'Roboto', sans-serif;
  font-weight: 200;
  font-size: 20px;
  color: #ffffff;
  text-decoration: none;
 }

 .nav-links {
display: flex;
justify-content: space-around;
width: 30%;
text-decoration: none;
 }

 .nav-links a {
   text-decoration: none;
 }
 
 h2, h3 {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
 }

a {
  color: #ffffff;
  text-decoration: none;
}

img {
  height: 15%;
  width: 15%;
  float: left;
  display: block;
  margin: 40px;
  padding: 20px;
  border-radius: 20%;
}

